--- a/comment.html
+++ b/comment.html
@@ -3,26 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>网页添加独立评论功能</title>
+    <!-- 按顺序引入全局样式、文章样式、评论样式 -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/article.css">
     <link rel="stylesheet" href="css/comment.css">
-    <style>
-        pre {
-            background-color: #f5f5f5;
-            padding: 15px;
-            border-radius: 5px;
-            overflow-x: auto;
-            color: #333;
-            font-size: 14px;
-            font-family: monospace;
-            line-height: 1.5;
-        }
-        code {
-            color: #d63384;
-        }
-    </style>
 </head>
 <body>
-    <!-- 文章详情模块 -->
+    <!-- 文章详情模块 - 由article.css统一控制居中及样式 -->
     <div class="article-detail">
         <h1>【前端学习】网页添加独立评论功能</h1>
         <p class="article-meta">发布时间：2025-12-29 | 作者：梁锦涛</p>
@@ -126,7 +113,7 @@ function saveComment(comment) {
         <a href="index.html" class="back-home">返回首页</a>
     </div>
 
-    <!-- 本日志的评论模块 -->
+    <!-- 评论模块 - 由comment.css控制居中及样式 -->
     <div class="comment-section" data-article-id="article_comment_update">
         <h2>评论区</h2>
         <div class="comment-form">
