--- a/deploy.html
+++ b/deploy.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>【Linux学习】Nginx部署静态网页</title>
+    <!-- 按顺序引入：全局样式 → 文章统一样式 → 评论样式，确保无冲突且居中 -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/article.css">
     <link rel="stylesheet" href="css/comment.css">
 </head>
 <body>
@@ -25,11 +27,11 @@
             <h3>三、总结</h3>
             <p>Linux下部署静态博客超级简单，这就是我们的学习记录，希望对大家有帮助~</p>
         </div>
-        <!-- 返回首页按钮 -->
+        <!-- 返回首页按钮 - 样式由article.css统一控制 -->
         <a href="index.html" class="back-home">返回首页</a>
     </div>
 
-    <!-- 评论功能模块 -->
+    <!-- 评论功能模块 - 由comment.css控制居中及样式 -->
     <div class="comment-section" data-article-id="article_nginx">
         <h2>评论区</h2>
         <!-- 评论输入表单 -->
