--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Web课程作业</title>
-    <!-- 引入外部CSS样式文件（零几年经典引入方式，带type属性） -->
+    <!-- 引入外部CSS样式文件 -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-    <!-- TOP图片 - 固定宽度，复古样式 -->
+    <!-- 顶部图片 -->
     <img src="images/gltu.jpg" class="top-img">
 
     <!-- 导航栏模块 -->
@@ -55,7 +55,7 @@
         <h2>关于我们</h2>
         <p>我们是411组，这是我们的Web课程作业~</p>
 
-        <!-- 头像+名字 横向排列容器（旧版inline-block布局） -->
+        <!-- 成员头像与名字排列容器 -->
         <div style="margin-top: 20px; text-align: center;">
             <div style="display: inline-block; text-align: center; margin: 0 20px;">
                 <img src="images/ljt.jpg" class="memb_avt">
@@ -101,14 +101,14 @@
         <p>GitHub：<a href="https://github.com/fromhatetolove/">https://github.com/fromhatetolove/</a></p>
     </div>
 
-    <!-- 新增：蓝色条形div -->
+    <!-- 蓝色条形提示模块 -->
     <div style="background-color: blue; width: 990px; 
             padding: 15px 0; margin: 20px auto 0; 
             text-align: center;">
         <p style="color: white; margin: 0; font-size: 16px;">喜欢这种复古风格吗？如果你有好主意，来我的GitHub提一个Request吧！</p>
     </div>
 
-    <!-- 引入外部JS脚本文件（零几年经典引入方式，带type属性） -->
+    <!-- 引入外部JS脚本文件 -->
     <script type="text/javascript" src="js/main.js"></script>
 </body>
 
