--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="article-list">
             <a href="comment.html" style="text-decoration: none; color: #000;">
                 <div class="article-item">
-                    <h3 class="article-title">【前端学习】网页添加独立评论功能</h3>
+                    <h3 class="article-title">【Web学习】本地JSON存储文章评论</h3>
                     <p class="article-desc">添加了评论功能！记录在浏览器本地存储</p>
                 </div>
             </a>
