--- a/comment.html
+++ b/comment.html
@@ -14,7 +14,7 @@
     <!-- 文章详情模块（学习记录+核心代码+示例嵌入） -->
     <div class="article-detail">
         <h1>【Web学习】本地JSON存储文章评论</h1>
-        <p class="article-meta">发布时间：2026-01-02 | 作者：梁锦涛</p>
+        <p class="article-meta">发布时间：2026-01-02 | 作者：梁锦涛、豆包AI</p>
         <div class="article-content">
             <h3>一、什么是本地JSON存储评论</h3>
             <p>本地JSON存储评论是一种无需数据库的轻量化方案，通过JSON文件作为数据载体，存储用户提交的评论信息，再通过JavaScript读取和写入JSON文件，配合Python简易服务器实现本地调试，适合静态博客、学习项目等小型场景。
