--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
     <div class="blog-container">
         <!-- 文章列表模块 -->
         <div class="article-list">
-            <a href="comment.html" style="text-decoration: none; color: #000;">
+            <a href="articles/comment.html" style="text-decoration: none; color: #000;">
                 <div class="article-item">
                     <h3 class="article-title">【Web学习】本地JSON存储文章评论</h3>
                     <p class="article-desc">添加了评论功能！记录在浏览器本地存储</p>
                 </div>
             </a>
 
-            <a href="deploy.html" style="text-decoration: none; color: #000;">
+            <a href="articles/deploy.html" style="text-decoration: none; color: #000;">
                 <div class="article-item">
                     <h3 class="article-title">【Linux学习】Nginx部署静态网页</h3>
                     <p class="article-desc">记录在Linux系统下如何快速部署静态网页</p>
                 </div>
             </a>
 
-            <a href="js.html" style="text-decoration: none; color: #000;">
+            <a href="articles/js.html" style="text-decoration: none; color: #000;">
                 <div class="article-item">
                     <h3 class="article-title">【Web学习】JavaScript应用</h3>
                     <p class="article-desc">JS是一个简单易用的WEB脚本语言</p>
@@ -57,40 +57,54 @@
 
         <!-- 成员头像与名字排列容器 -->
         <div style="margin-top: 20px; text-align: center;">
-            <div style="display: inline-block; text-align: center; margin: 0 20px;">
-                <img src="images/ljt.jpg" class="memb_avt">
-                <p style="margin-top: 5px; font-weight: bold; font-size: 14px;">梁锦涛</p>
-            </div>
+            <a href="members/ljt.html" style="text-decoration: none; color: #000;">
+                <div style="display: inline-block; text-align: center; margin: 0 20px;">
+                    <img src="images/ljt.jpg" class="memb_avt">
+                    <p style="margin-top: 5px; font-weight: bold; font-size: 14px;">梁锦涛</p>
+                </div>
+            </a>
 
-            <div style="display: inline-block; text-align: center; margin: 0 20px;">
-                <img src="images/qjh.jpg" class="memb_avt">
-                <p style="margin-top: 5px; font-weight: bold; font-size: 14px;">邱杰海</p>
-            </div>
+            <a href="members/qjh.html" style="text-decoration: none; color: #000;">
+                <div style="display: inline-block; text-align: center; margin: 0 20px;">
+                    <img src="images/qjh.jpg" class="memb_avt">
+                    <p style="margin-top: 5px; font-weight: bold; font-size: 14px;">邱杰海</p>
+                </div>
+            </a>
 
-            <div style="display: inline-block; text-align: center; margin: 0 20px;">
-                <img src="images/zcr.jpg" class="memb_avt">
-                <p style="margin-top: 5px; font-weight: bold; font-size: 14px;">张成荣</p>
-            </div>
+            <a href="members/zcr.html" style="text-decoration: none; color: #000;">
+                <div style="display: inline-block; text-align: center; margin: 0 20px;">
+                    <img src="images/zcr.jpg" class="memb_avt">
+                    <p style="margin-top: 5px; font-weight: bold; font-size: 14px;">张成荣</p>
+                </div>
+            </a>
 
-            <div style="display: inline-block; text-align: center; margin: 0 20px;">
-                <img src="images/wqx.jpg" class="memb_avt">
-                <p style="margin-top: 5px; font-weight: bold; font-size: 14px;">吴其迅</p>
-            </div>
+            <a href="members/wqx.html" style="text-decoration: none; color: #000;">
+                <div style="display: inline-block; text-align: center; margin: 0 20px;">
+                    <img src="images/wqx.jpg" class="memb_avt">
+                    <p style="margin-top: 5px; font-weight: bold; font-size: 14px;">吴其迅</p>
+                </div>
+            </a>
 
-            <div style="display: inline-block; text-align: center; margin: 0 20px;">
-                <img src="images/lgs.jpg" class="memb_avt">
-                <p style="margin-top: 5px; font-weight: bold; font-size: 14px;">梁国胜</p>
-            </div>
+            <a href="members/lgs.html" style="text-decoration: none; color: #000;">
+                <div style="display: inline-block; text-align: center; margin: 0 20px;">
+                    <img src="images/lgs.jpg" class="memb_avt">
+                    <p style="margin-top: 5px; font-weight: bold; font-size: 14px;">梁国胜</p>
+                </div>
+            </a>
 
-            <div style="display: inline-block; text-align: center; margin: 0 20px;">
-                <img src="images/lcy.jpg" class="memb_avt">
-                <p style="margin-top: 5px; font-weight: bold; font-size: 14px;">刘昌源</p>
-            </div>
+            <a href="members/lcy.html" style="text-decoration: none; color: #000;">
+                <div style="display: inline-block; text-align: center; margin: 0 20px;">
+                    <img src="images/lcy.jpg" class="memb_avt">
+                    <p style="margin-top: 5px; font-weight: bold; font-size: 14px;">刘昌源</p>
+                </div>
+            </a>
 
-            <div style="display: inline-block; text-align: center; margin: 0 20px;">
-                <img src="images/wzm.jpg" class="memb_avt">
-                <p style="margin-top: 5px; font-weight: bold; font-size: 14px;">王志明</p>
-            </div>
+            <a href="members/wzm.html" style="text-decoration: none; color: #000;">
+                <div style="display: inline-block; text-align: center; margin: 0 20px;">
+                    <img src="images/wzm.jpg" class="memb_avt">
+                    <p style="margin-top: 5px; font-weight: bold; font-size: 14px;">王志明</p>
+                </div>
+            </a>
         </div>
     </div>
 
