Updated Jan 3: Fix several bugs

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="articles/comment.html" style="text-decoration: none; color: #000;">
                 <div class="article-item">
                     <h3 class="article-title">【Web学习】本地JSON存储文章评论</h3>
-                    <p class="article-desc">添加了评论功能！记录在浏览器本地存储</p>
+                    <p class="article-desc">添加了评论功能！记录在本地JSON存储</p>
                 </div>
             </a>
 
