Modified personal info

--- a/members/ljt.html
+++ b/members/ljt.html
@@ -22,9 +22,7 @@
             <p>3. 专业：软件工程</p>
 
             <h3>二、擅长领域</h3>
-            <p>1. 编程语言：C/C++</p>
-            <p>2. 操作系统：Linux</p>
-            <p>3. Web开发：掌握基本的WEB编程技能</p>
+            <p>熟练C/C++编程，熟练基本的Linux生产力操作，掌握基本的WEB编程技能</p>
 
             <h3>三、个人爱好</h3>
             <p>1. 出行：喜爱外出探索，感受不同风景与人文</p>
