Updated on Jan 4: Fixed several issues

--- a/members/ljt.html
+++ b/members/ljt.html
@@ -7,7 +7,6 @@
     <!-- 按顺序引入全局、文章、评论样式文件 -->
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/article.css">
-    <link rel="stylesheet" href="../css/comment.css">
 </head>
 
 <body>
@@ -23,6 +22,7 @@
 
             <h3>二、擅长领域</h3>
             <p>熟练C/C++编程，熟练基本的Linux生产力操作，掌握基本的WEB编程技能</p>
+            <p>玩过各种各样的Linux发行版，还玩过FreeBSD。</p>
 
             <h3>三、个人爱好</h3>
             <p>1. 出行：喜爱外出探索，感受不同风景与人文</p>
