--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="index.html">首页</a></li>
                 <li><a href="#about">关于</a></li>
                 <li><a href="#contact">联系方式</a></li>
+                <li><a href="articles/to_mister.html" style="color: rgb(255, 112, 112);">写给老师</a></li>
             </ul>
         </div>
     </nav>
