--- a/members/ljt.html
+++ b/members/ljt.html
@@ -23,11 +23,13 @@
             <h3>二、擅长领域</h3>
             <p>熟练C/C++编程，熟练基本的Linux生产力操作，掌握基本的WEB编程技能</p>
             <p>玩过各种各样的Linux发行版，还玩过FreeBSD。</p>
+            <p>目前正在使用Pop!_OS，这是一种基于Debian的发行版。</p>
 
             <h3>三、个人爱好</h3>
             <p>1. 出行：喜爱外出探索，感受不同风景与人文</p>
             <p>2. 刷视频：关注各类知识分享与趣味内容，拓宽视野</p>
             <p>3. 打游戏：通过游戏放松身心，锻炼逻辑思维与团队协作能力</p>
+            <p>4. 折腾各种Linux社区以及开源社区的新技术</p>
 
             <h3>四、个人格言</h3>
             <p>脚踏实地，仰望星空，以热爱赴山海，以笃行致远方</p>
@@ -35,7 +37,9 @@
             <h3>五、联系方式</h3>
             <p>QQ: 2523624605</p>
             <p>邮箱: stumalex@outlook.com</p>
-            <p>GitHub: https://github.com/fromhatetolove/</p>
+            <p>GitHub: <a style="color: blue; text-decoration: underline;" href="https://github.com/fromhatetolove/">
+                https://github.com/fromhatetolove/
+            </a></p>
         </div>
         <!-- 返回首页按钮 -->
         <a href="../index.html" class="back-home">返回首页</a>
